# ghdl_sample_project

./: CMakeLists.txt  README.md
cmake/: macros.cmake  test_macros.cmake
doc/: make.bat
doc/source/: conf.py  index.rst
src/: CMakeLists.txt
src/adder/: CMakeLists.txt  adder.vhdl
src/viterbi_encoder/: CMakeLists.txt  next_state_lkup_table.vhdl  output_lkup_table.vhdl  viterbi_encoder.vhdl
test/: CMakeLists.txt
test/adder/: CMakeLists.txt  adder_tb.vhdl
test/viterbi_encoder/: CMakeLists.txt  next_state_lkup_table_tb.vhdl  output_lkup_table_tb.vhdl  viterbi_encoder_tb.vhdl
